deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  namespace: kube-public
  labels:
    app: node
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: gcr.io/zippy-catwalk-336307/ved-node:v1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: kube-public
spec:
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
